권한 부여부분 로직 수정